test/libyul/yulSyntaxTests/invalid_tuple_assignment.yul
{
	let x, y := 1
}
// ----
// DeclarationError 3812: (3-16): Variable count mismatch: 2 variables and 1 values.
